--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 </label>
             </div>
             <div class="addBox">
-                <input id="cont" type="text">
+                <input id="cont" type="text" placeholder="List Here">
             </div>
             <div id="list">
                 
